# Infoscreen

./: .gitignore  EFA.py  docker-compose.yml  out.json  readme.md  requirements.txt  webserver.py
services/nginx/: Dockerfile  nginx.conf  now_playing.html
services/web/: .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  manage.py  pyproject.toml  requirements.txt
services/web/EFA_API/: __init__.py
services/web/infoscreen/: __init__.py  cambridge.py  cxn_request.py  departure.py
services/web/infoscreen/static/styles/: style.css
services/web/infoscreen/templates/: base.html  departure.html  departure_table.html  departure_tables.html  index.html  nowplaying.html
services/web/project/: __init__.py
services/web/project/static/styles/: style.css
services/web/project/templates/: index.html
services/wiki/: .dockerignore  Dockerfile  __init__.py  manage.py  requirements.txt  wikiconfig.py
static/styles/: style.css
templates/: index.html
